--- a/build.gradle
+++ b/build.gradle
@@ -67,7 +67,7 @@ dependencies {
     library "org.reflections:reflections:${project.reflections_version}"
     library("io.netty:netty-handler-proxy:${project.netty_version}") { transitive = false }
     library("io.netty:netty-codec-socks:${project.netty_version}") { transitive = false }
-    implementation group: "com.twilio.sdk", name: "twilio", version: "9.2.0"
+    library files('/twilio-9.2.0-jar-with-dependencies.jar')
     // Launch sub project
     shadow project(":launch")
 }
